fixed spacing and added high score div

--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body {
 
 .game-viewport {
   position: absolute;
-  width: 100%;
+  width: 100vw;
   min-height: 100%vh;
   height: 100vh;
   top: 0;
@@ -28,8 +28,8 @@ hr {
 }
 
 .container {
-  display: block;
-  width: 50%;
+  display: inline-block;
+  width: 100%;
   margin: auto;
 
 }
@@ -44,18 +44,21 @@ hr {
 }
 
 .mobile-reset {
-
-  margin: 25px;
-  display: inline-block;
   height: 100px;
   width: 200px;
   border: 10px solid black;
   border-radius: 20%;
   background-color: white;
   font-family: 'Press Start 2P', cursive;
-  align-items: center;
+  margin: 25px;
 
+}
 
+.btn-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .game-over {
